// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner /> renders a error state 1`] = `
<div>
  <div
    style="background-color: rgb(255, 186, 186); padding: 20px; margin: 10px 0px; border: 2px solid black;"
  >
    uh oh
  </div>
</div>
`;

exports[`<Banner /> renders a success state 1`] = `
<div>
  <div
    style="background-color: rgb(223, 242, 191); padding: 20px; margin: 10px 0px; border: 2px solid black;"
  >
    woohoo
  </div>
</div>
`;
